# ina228

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  NOTES-AI.md  PROPOSAL.md  README.md  todo.txt
examples/: esp32_read.rs
examples/esp32/: Cargo.toml
examples/esp32-c6-test-suite/: Cargo.toml  README.md  sdkconfig.defaults
examples/esp32-c6-test-suite/.cargo/: config.toml
examples/esp32-c6-test-suite/src/: main.rs
examples/esp32-c6-test-suite/src/suite/: cases.rs  mod.rs
examples/esp32/.cargo/: config.toml
examples/esp32/src/: main.rs
src/: lib.rs  registers.rs
tests/: driver_tests.rs
