[package]
name = "ina228"
version = "0.2.0"
edition = "2024"
description = "Platform-agnostic Rust driver for the TI INA228 power/energy/charge monitor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xorza/ina228"
keywords = ["ina228", "embedded-hal", "power-monitor", "i2c", "ti"]
categories = ["embedded", "hardware-support", "no-std"]
exclude = ["examples/"]

[dependencies]
embedded-hal = "1.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11", features = ["eh1"] }
