[package]
name = "esp32-c6-test-suite"
version = "0.1.0"
edition = "2024"
resolver = "2"

[[bin]]
name = "esp32-c6-test-suite"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
ina228 = { path = "../.." }
embedded-hal = "1.0"
esp-idf-sys = "0.37.2"

[build-dependencies]
embuild = "0.33"
